--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 server:
-  port: 8001
+  port: 8080
 
 spring:
   application:
     name: wangjun-blog
   datasource:
-    username: root    # ????????
-    password: 123456  # ???????
-    # ??????????mysql8?
+    username: root
+    password: 123456
+
     url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
